# estimation-tool-chunker

./: .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile_bak  README.md  check_gpu.py  deploy-swarm.sh  docker-compose-experimental.yaml  docker-compose-gpu.yaml  docker-compose-regular.yaml  docker-compose-standard.yaml  docker-compose-swarm.yaml  docker-compose.yaml  docker-run.sh  justfile  pyproject.toml  run-docling.sh
.github/workflows/: cd.yaml
src/: config.py  main.py  main.py.bak  models.py
