[project]
name = "docling-inference"
version = "0.2.0"
description = "Docling inference server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.31.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "python-multipart>=0.0.19",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.0",
  "torchvision>=0.20.0",
]
cu121 = [
  "torch>=2.5.0+cu121",
  "torchvision>=0.20.0+cu121",
  "pytorch-cuda==12.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

